--- a/public/layout/layout.css
+++ b/public/layout/layout.css
@@ -12,10 +12,15 @@ body{
 header {
     width:100%;
     height: 60.8px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     background-color: #F5F5F5;
-    top: 0px;
-    z-index: 1100;
+    box-shadow: 0 1px 15px;
+    z-index: fixed;
 }
+
 
 main {
     width: 100%;
