--- a/public/layout/layout.css
+++ b/public/layout/layout.css
@@ -11,7 +11,7 @@ body{
 
 header {
     width:100%;
-    height: 60.8px;
+    height: 109px;
     position: fixed;
     top: 0;
     left: 0;
@@ -19,8 +19,25 @@ header {
     background-color: #F5F5F5;
     box-shadow: 0 1px 15px;
     z-index: fixed;
+    display: flex;
+    flex-direction: row;
 }
 
+nav{
+    display: flex;
+    justify-content: end;
+    margin-left: auto;
+    margin-right: 3.5%;
+}
+
+.links-nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 200px;
+    align-items: center;
+    list-style: none;
+}
 
 main {
     width: 100%;
@@ -28,6 +45,31 @@ main {
     margin: 0;
     padding-top: 1%;
     z-index: 1001;
+}
+
+.section-hero {
+
+}
+.hero-home {
+  
+}
+
+.hero-conejitos-bonitos {
+    
+}
+
+.hero-welcome {
+    position: relative;
+    background: #20111113;
+    backdrop-filter: blur(10px);
+}
+.hero-greeting {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    
+}
+.hero-about-us {
 }
 
 .section-music{
