--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -17,3 +17,49 @@
     border-color: #9595948f;
     border-width: 1.5px;
 }
+
+nav{
+    display: flex;
+    justify-content: end;
+    margin-left: auto;
+    margin-right: 3.5%;
+}
+
+.links-nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 200px;
+    align-items: center;
+    list-style: none;
+}
+.section-hero {
+    margin: 0;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    display: flex;
+    align-items: center;
+}
+
+.hero-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.hero-welcome {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 2; 
+}
+
+.hero-greeting {
+    font-size: 2.5em;
+    margin-bottom: 10px;
+}
+
+
