--- a/public/layout/layout.css
+++ b/public/layout/layout.css
@@ -18,7 +18,7 @@ header {
     width: 100%;
     background-color: #F5F5F5;
     box-shadow: 0 1px 15px;
-    z-index: fixed;
+    z-index: 3;
     display: flex;
     flex-direction: row;
 }
