--- a/public/layout/layout.css
+++ b/public/layout/layout.css
@@ -36,7 +36,7 @@ main {
 .section-music{
 background-color: #F0F0F0;
 width: 100%;
-height: 100%;
+height: 783px;
 
 }
 
@@ -49,5 +49,9 @@ height: 100%;
 
 footer{
     background-color: #F5F5F5;
-
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
