--- a/public/layout/layout.css
+++ b/public/layout/layout.css
@@ -4,6 +4,7 @@ body{
     background-color: #C8D2C5;
     width: 100%;
     height: 100%;
+    margin: 0;
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale; 
@@ -15,7 +16,6 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
     background-color: #F5F5F5;
     box-shadow: 0 1px 15px;
     z-index: 3;
@@ -37,7 +37,11 @@ main {
 background-color: #F0F0F0;
 width: 100%;
 height: 783px;
-
+border-radius: 30px;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
 }
 
 .section-notes {
@@ -48,7 +52,7 @@ height: 783px;
 }
 
 footer{
-    background-color: #F5F5F5;
+    background-color: #FFFFFF;
     width: 100%;
     height: 100%;
     display: flex;
