--- a/public/layout/layout.css
+++ b/public/layout/layout.css
@@ -52,7 +52,7 @@ height: 100vh;
 }
 
 footer{
-    background-color: #FFFFFF;
+    background-color: #E8E7E7;
     width: 100%;
     height: 100%;
     display: flex;
