--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -36,16 +36,43 @@ nav{
     list-style: none;
 }
 
+nav ul li a:hover {
+    color: #A24C39;
+  }
+  
+  nav ul li a {
+    color: #000000;
+    padding: 0 7px 0 7px;
+    text-decoration: none;
+    position: relative;
+  }
+  
+  ul li a::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #A24C39;
+    bottom: -10px;
+    left: 0;
+    transition: all 0.2s ease-in-out;
+    transform: scale(0, 0);
+  }
+  
+  ul li a:hover::before {
+    transform: scale(1, 1);
+  }
+
 .section-hero {
     margin: 0;
     z-index: 2;
     overflow: hidden;
-    
 }
 
 .hero-conejitos-bonitos {
     height: 100%;
     overflow: hidden; 
+    
 }
 .hero-image {
     width: 100%;
@@ -112,7 +139,7 @@ nav{
     height: 80%;
     max-width: 1299px;
     max-height: 515px;
-    background-color: #fffbf5;
+    background-color: #ffffff;
     border: solid 0.5px #f4f4f4;
     border-radius: 90px;
     display: flex;
@@ -120,6 +147,7 @@ nav{
    align-items: center;
    justify-content:space-between ;
    margin: 0;
+
    
 }
 
@@ -144,7 +172,7 @@ nav{
 }
 
 .song-info{
-    margin-right: 28rem;
+    margin-right: 15em;
     margin-top: 3%;
     right: 50%;
     left: 35%;
@@ -179,11 +207,27 @@ h3.song-artist {
     margin-top: 0px;
 }
 
+
 .music-icons {
 margin: 0;
+display: flex;
+flex-direction: column;
+gap: 69.99px;
+padding-right: 15%;
+color: #A24C39;
 
 }
-
+.icon-container {
+    width: 57.878px;
+    height: 57.878px;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #E2C0AD;
+    border-radius: 50%;
+    filter: drop-shadow(6.89px 6.89px 20.671px #221A37) drop-shadow(-6.89px -6.89px 20.671px rgba(255, 255, 255, 0.10));
+}
 
 
 .footer-logo {
@@ -201,4 +245,5 @@ margin: 0;
     color: #A24C39;
     
 }
+
 
